# leptos-csr-starter-kit

./: Cargo.toml  README.md  index.html  tailwind.config.js
cli/: Cargo.toml
cli/src/: main.rs
src/: app.rs  global.rs  main.rs
src/templates/tailwind/: index.html
src/templates/tailwind/src/: app.rs
style/: output.css
templates/tailwind/: index.html
