[package]
name = "create-leptos-csr-tw"
version = "0.2.0"
edition = "2021"
description = "A CLI for setting up a client-side Leptos web application."
readme = "README.md"
license = "MIT"
authors = ["Matthew Kim <matthewkmkim@gmail.com>"]
repository = "https://github.com/friendlymatthew/create-leptos-csr"


[dependencies]
colored = "2.0.4"
copy_dir = "0.1.3"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
regex = "1.10.2"
reqwest = "0.11.22"
tempfile = { version = "3.8.0", features = [] }
url = "2.4.1"
